--- a/package.json
+++ b/package.json
@@ -89,5 +89,27 @@
     "typescript": "^4.1.4"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@reduxjs/toolkit": "^1.5.0",
+    "@types/react-dnd": "^3.0.2",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/shortid": "^0.0.29",
+    "exact-trie": "^1.0.13",
+    "fast-sort": "^2.2.0",
+    "filesize": "^6.1.0",
+    "fuzzy-search": "^3.2.1",
+    "hotkeys-js": "^3.8.2",
+    "memoizee": "^0.4.15",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
+    "react-intl": "^5.12.2",
+    "react-jss": "^10.5.1",
+    "react-redux": "^7.2.2",
+    "react-virtualized-auto-sizer": "^1.0.4",
+    "react-window": "^1.8.6",
+    "redux-watch": "^1.2.0",
+    "shortid": "^2.2.16",
+    "tsdef": "^0.0.14"
   }
 }
